oasis-macros/tests/ui/new_bad_ret.stderr
error: `Counter::new` must return `Self`
 --> $DIR/new_bad_ret.rs:8:49
  |
8 |     pub fn new(ctx: &Context, start_count: u32) -> () {
  |                                                 ^^

error: aborting due to previous error

